cmake_minimum_required(VERSION 3.2)
project(LeetCode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(add-two-numbers)
add_subdirectory(container-with-most-water)
add_subdirectory(contains-duplicate)
add_subdirectory(contains-duplicate-ii)
add_subdirectory(count-primes)
add_subdirectory(happy-number)
add_subdirectory(implement-queue-using-stacks)
add_subdirectory(implement-stack-using-queues)
add_subdirectory(integer-to-roman)
add_subdirectory(intersection-of-two-linked-lists)
add_subdirectory(invert-binary-tree)
add_subdirectory(isomorphic-strings)
add_subdirectory(length-of-last-word)
add_subdirectory(longest-common-prefix)
add_subdirectory(longest-palindromic-substring )
add_subdirectory(longest-substring-without-repeating-characters)
add_subdirectory(median-of-two-sorted-arrays)
add_subdirectory(palindrome-linked-list)
add_subdirectory(palindrome-number)
add_subdirectory(power-of-two)
add_subdirectory(rectangle-area)
add_subdirectory(regular-expression-matching)
add_subdirectory(remove-linked-list-elements)
add_subdirectory(reverse-integer)
add_subdirectory(reverse-linked-list)
add_subdirectory(roman-to-integer)
add_subdirectory(string-to-integer-atoi)
add_subdirectory(summary-ranges)
add_subdirectory(two-sum)
add_subdirectory(zigzag-conversion)
add_subdirectory(3sum)
add_subdirectory(add-two-numbers-ii)
